@@ -1,11 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.71 2005/02/18 16:39:38 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.72 2005/02/18 19:14:16 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
 
   18 Feb 2005; Andrew Gaffney <agaffney@gentoo.org>
-  Created GLISayWhat module. Renamed GLISayWhat to GLILocalization
+  Created GLISayWhat module. Renamed GLISayWhat to GLILocalization. Moved
+  lang parameter to __init__()
   
   10 Feb 2005; Preston Cody <codeman@gentoo.org>
   updates to TODO list.
